<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/messages"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp" />


                <EditText
                    android:id="@+id/msg1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:hint="@string/message_1"
                  />
                <EditText
                    android:id="@+id/msg2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:hint="@string/message_2" />
                <EditText
                    android:id="@+id/msg3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:hint="@string/message_3" />
                <EditText
                    android:id="@+id/msg4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:hint="@string/message_4" />
                <EditText
                    android:id="@+id/msg5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:hint="@string/message_5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                  android:layout_marginVertical="@dimen/_5sdp"
                    android:gravity="center">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cancel_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_14ssp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/save_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="@string/save"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>
