<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/_5sdp"
        tools:context=".activities.MsgSettingActivity">

        <TextView
            android:id="@+id/tv_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="@string/dashboard"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logout_imageview"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:src="@drawable/shutdown"
            app:layout_constraintBottom_toBottomOf="@id/tv_11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_11" />

        <ImageView
            android:id="@+id/setting_imageview"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:src="@drawable/ic_baseline_settings_24"
            app:layout_constraintBottom_toBottomOf="@id/tv_11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_11" />


        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#024CAF50"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_11">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/contact"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/not_contact"
                android:textSize="16sp" />
            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/both"
                android:textSize="16sp" />


        </RadioGroup>

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_spinner"
            android:paddingHorizontal="@dimen/_5sdp"
           android:paddingVertical="5dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup1">


            <TextView
                android:id="@+id/tv112"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/miss_call_msg" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/miss_call_msg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv112" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="5dp"
            android:background="@drawable/bg_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout1">


            <TextView
                android:id="@+id/tv22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receive_call_msg" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/miss_call_msg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv22" />


        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_days_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout2"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/after_how"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvListeBaslik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/kisiler"
            android:textColor="@color/siyah"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_days_layout" />

        <CheckBox
            android:id="@+id/cbTumunuSec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_days_layout"
            android:layout_alignEnd="@id/input_days_layout"
            android:layout_alignRight="@id/input_days_layout"
            android:text="@string/hint_tumunusec"
            android:textColor="@color/siyah"
            android:textSize="13.0sp"

            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_days_layout" />


        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/in_contacts"
            android:textColor="@color/siyah"
            android:textSize="14.0sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_days_layout" />

        <ListView
            android:id="@+id/lvKisiler"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:background="@drawable/ic_backgroundd"
            android:drawSelectorOnTop="true"
            android:nestedScrollingEnabled="true"
            android:paddingBottom="10dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvListeBaslik" />

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/out_contacts"
            android:textColor="@color/siyah"
            android:textSize="16.0sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lvKisiler" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/call_log_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:background="@drawable/ic_backgroundd"
            android:nestedScrollingEnabled="true"
            android:text="@string/hello_blank_fragment"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_2" />

        <Button
            android:id="@+id/btnMessages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messages"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/textView"
            app:layout_constraintEnd_toStartOf="@+id/btnSave"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exclude"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnMessages" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_systems_inc"
            android:textSize="@dimen/_12ssp"
            android:textColor="#252525"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+972502909876"
            android:textSize="@dimen/_10ssp"
            android:textColor="#2F3FCC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>