<?xml version="1.0" encoding="utf-8"?>

<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="vertical"
        >


        <RadioGroup
            android:id="@+id/language_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/english_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingStart="5dp"
                android:text="@string/english"
                android:textSize="18dp"

                />

            <RadioButton
                android:id="@+id/hibro_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/hibro"
                android:textSize="18dp" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/save"

            android:textAllCaps="false"
            android:textSize="@dimen/_14ssp" />


    </LinearLayout>
</layout>

