<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >


    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/continue_as"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/admin_btn"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/admin"

        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:cornerRadius="@dimen/_20sdp"
        android:textSize="@dimen/_14ssp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/user_btn"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/user"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:cornerRadius="@dimen/_20sdp"
        android:textSize="@dimen/_14ssp"

        />

</LinearLayout>
</layout>
