<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"

                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/update_user"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_pass_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                 app:passwordToggleEnabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>






                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:gravity="center">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cancel_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_14ssp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/save_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:text="@string/update"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>
